RESOLVED FIXED306314
layerX/layerY return incorrect values with CSS transforms
https://bugs.webkit.org/show_bug.cgi?id=306314
Summary layerX/layerY return incorrect values with CSS transforms
Ahmad Saleem
Reported 2026-01-26 19:43:01 PST
ssia - interop issue
Attachments
Radar WebKit Bug Importer
Comment 1 2026-01-26 19:43:11 PST
Ahmad Saleem
Comment 2 2026-01-26 19:46:01 PST
EWS
Comment 3 2026-01-27 13:10:42 PST
Committed 306300@main (63d6cf248df1): <https://commits.webkit.org/306300@main> Reviewed commits have been landed. Closing PR #57310 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.